# agh-sfml-game

./: .gitignore  CMakeLists.txt  README.md
data/: users.json
include/: AuthScreen.hpp  Backgorund.hpp  CollisionManager.hpp  CombatStats.hpp  Door.hpp  Enemy.hpp  EnemyBase.hpp  EnemyBoss.hpp  EnemyChaseState.hpp  EnemyChaser.hpp  EnemyGunner.hpp  EnemyGunnerWanderState.hpp  EnemyIdleState.hpp  EnemyState.hpp  EnemyStateMachine.hpp  Entity.hpp  FloatingText.hpp  Game.hpp  GameObj.hpp  GameOverScreen.hpp  GameScreen.hpp  LevelData.hpp  LevelLoader.hpp  MenuScreen.hpp  Movable.hpp  Obstacle.hpp  Player.hpp  PlayerBase.hpp  PlayerBasic.hpp  Projectile.hpp  ProjectileManager.hpp  Screen.hpp  ScreenManager.hpp  SettingsScreen.hpp  SoundManager.hpp  StartScreen.hpp  TextManager.hpp  TextureManager.hpp  UserManager.hpp
levels/: level_01.json  level_02.json  level_03.json  level_04.json
src/: AuthScreen.cpp  Background.cpp  CollisionManager.cpp  Door.cpp  Enemy.cpp  EnemyBase.cpp  EnemyBoss.cpp  EnemyChaseState.cpp  EnemyChaser.cpp  EnemyGunner.cpp  EnemyGunnerWanderState.cpp  EnemyIdleState.cpp  EnemyStateMachine.cpp  Entity.cpp  FloatingText.cpp  Game.cpp  GameObj.cpp  GameOverScreen.cpp  GameScreen.cpp  LevelLoader.cpp  MenuScreen.cpp  Movable.cpp  Obstacle.cpp  Player.cpp  PlayerBase.cpp  PlayerBasic.cpp  Projectile.cpp  ProjectileManager.cpp  Screen.cpp  ScreenManager.cpp  SettingsScreen.cpp  SoundManager.cpp  StartScreen.cpp  TextManager.cpp  TextureManager.cpp  UserManager.cpp  main.cpp
